--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alley's DM Screen v0.6.55.9</title>
+  <title>Alley's DM Screen v.0.6.58.13</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
@@ -62,6 +62,12 @@
       text-align: center;
       padding: 0.25rem;
     }
+    .instance th input[type="text"] {
+      width: 100%;
+      text-align: center;
+      border: none;
+      background: none;
+    }
     .close-btn {
       position: absolute;
       top: 0.5rem;
@@ -107,15 +113,21 @@
           <button onclick="cycleTheme(this)">⟳</button>
         </div>
 
-        <table>
-          <tr>${["STR", "DEX", "CON", "INT", "WIS", "CHA"].map(stat => `<th>${stat}</th>`).join('')}</tr>
-          <tr ondrop="drop(event)" ondragover="allowDrop(event)">${Array(6).fill('').map((_, index) => `<td><input id="cell-${instanceCount}-${index}" type="number" min="0" max="99" value="0" title="" readonly draggable="true" ondragstart="drag(event)" /></td>`).join('')}</tr>
-        </table>
+        <details open>
+          <summary>Stats</summary>
+          <table>
+            <tr>${["STR", "DEX", "CON", "INT", "WIS", "CHA"].map(stat => `<th>${stat}</th>`).join('')}</tr>
+            <tr ondrop="drop(event)" ondragover="allowDrop(event)">${Array(6).fill('').map((_, index) => `<td><input id="cell-${instanceCount}-${index}" type="number" min="0" max="99" value="0" title="" readonly draggable="true" ondragstart="drag(event)" /></td>`).join('')}</tr>
+          </table>
+        </details>
 
-        <table>
-          <tr>${["HP", "AC", "DC", "PP", "Ammo", "Charges"].map(stat => `<th>${stat}</th>`).join('')}</tr>
-          <tr>${Array(6).fill('').map(() => `<td><input type="number" min="0" max="99" value="0" /></td>`).join('')}</tr>
-        </table>
+        <details>
+          <summary>Attributes</summary>
+          <table>
+            <tr>${["HP", "AC", "DC", "PP", "Ammo", "Charges"].map(stat => `<th><input type="text" value="${stat}" /></th>`).join('')}</tr>
+            <tr>${Array(6).fill('').map(() => `<td><input type="number" min="0" max="99" value="0" /></td>`).join('')}</tr>
+          </table>
+        </details>
 
         <details>
           <summary>Spell Slots</summary>
@@ -125,6 +137,15 @@
           </table>
         </details>
 
+        <details>
+          <summary>Funds</summary>
+          <table>
+            <tr>${["P", "G", "E", "S", "C"].map(stat => `<th><input type="text" value="${stat}" /></th>`).join('')}</tr>
+            <tr>${Array(5).fill('').map(() => `<td><input type="number" min="0" max="99" value="0" /></td>`).join('')}</tr>
+          </table>
+        </details>
+
+        <br> <!-- Add line of space above the Generate and Reset buttons -->
         <button onclick="generateStats(this)">Generate</button>
         <button onclick="resetInstance(this)">Reset</button>
         <br><br> <!-- Add line of space above and between the buttons and the Actions textarea -->
@@ -160,7 +181,7 @@
     function resetInstance(button) {
       const instance = button.closest('.instance');
       instance.querySelectorAll('input[type="number"]').forEach(el => el.value = 0);
-      instance.querySelectorAll('input[type="text"], textarea').forEach(el => el.value = '');
+      instance.querySelectorAll('input[type="text"]:not([value]), textarea').forEach(el => el.value = ''); // Ensure text labels are not reset
       instance.querySelectorAll('select').forEach(select => select.selectedIndex = 0);
       instance.style.backgroundColor = "";
       instance.style.color = "";
@@ -168,8 +189,8 @@
 
     function generateStats(button) {
       const instance = button.closest('.instance');
-      const firstRowInputs = instance.querySelectorAll('table:nth-of-type(1) tr:nth-of-type(2) input');
-      const spellSlotInputs = instance.querySelectorAll('details table tr:nth-of-type(2) input');
+      const firstRowInputs = instance.querySelectorAll('details:nth-of-type(1) tr:nth-of-type(2) input');
+      const spellSlotInputs = instance.querySelectorAll('details:nth-of-type(3) table tr:nth-of-type(2) input');
 
       firstRowInputs.forEach(input => {
         const rolls = Array.from({length: 4}, () => Math.floor(Math.random() * 6 + 1));
