--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <details>
           <summary>Attributes</summary>
           <table>
-            <tr>${["HP", "AC", "DC", "PP", "Ammo", "Charges"].map(stat => `<th><input type="text" value="${stat}" /></th>`).join('')}</tr>
+            <tr>${["HP", "AC", "DC", "PP", "Ammo", "Charge"].map(stat => `<th><input type="text" value="${stat}" /></th>`).join('')}</tr>
             <tr>${Array(6).fill('').map(() => `<td><input type="number" min="0" max="99" value="0" /></td>`).join('')}</tr>
           </table>
         </details>
